<resources>
    <string name="app_name">SkinMate</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="enter_mailing_address">Enter Mailing Address</string>
    <string name="enter_insurance_information">Insurance Information</string>
    <string name="emergecny_contact_name">Emergecny Contact Name</string>
    <string name="enter_emergecny_contact_name">Enter Emergecny Contact Name</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="enter_emergency_contact_number">Enter Emergency Contact Number</string>
    <string name="note"><![CDATA[Note: Name, Gender, Date of Birth & Blood Group once entered cannot be edited later.]]></string>
    <string name="by_selecting">By selecting</string>
    <string name="create_my_account">\'Create my account\'</string>
    <string name="below_i_agree">below,I agree</string>
    <string name="to_skinmate_s">to SkinMate\'s</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_otp_sent_to">Please enter OTP sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="otp_validation_failed_please_retry">OTP validation failed,please retry.</string>
    <string name="retry">Retry</string>
    <string name="the_otp_has_been_successfully_verified">The OTP has been successfully verified.</string>
    <string name="verification_mail_sent">A verification mail has been sent to your mail id. Kindly verify it for proceeding.</string>
    <string name="okay">Okay</string>
    <string name="enter_number_or_e_mail_id">Enter Number or E-mail Id</string>
    <string name="phone_number_email_id">Phone Number/Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_with">Or Sign with</string>
    <string name="new_user_sign_up">New User?Sign Up</string>
    <string name="touch_id_fingerprint">Touch_id_fingerprint</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_to">Welcome to</string>
    <string name="skinmate">SkinMate</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="privacy_policy_terms_and_conditions">Privacy Policy . Terms and Conditions</string>
    <string name="enter_number">Enter Number</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email">Enter Email</string>
    <string name="set_password">Set Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="proceed">PROCEED</string>
    <string name="the_mobile_number_will_be_verified_with_one_time_password">The Mobile Number will be verified with One Time Password</string>
    <string name="existing_user">Existing User?</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="verification_required">Verification Required</string>
    <string name="before_you_schedule_any_appointment_you_must_verify_your_mail_id_to_proceed">Before you schedule any appointment, you must verify your mail id to proceed.</string>
    <string name="we_have_sent_a_verification_mail_sent_to">We have sent a verification mail sent to</string>
    <string name="resend_mail">RESEND MAIL</string>
    <string name="antony_robbins_gmail_com">Antony.Robbins@gmail.com</string>
    <string name="email_verification">email_verification</string>
    <string name="timer">\"\"</string>
    <string name="success">Success!</string>
    <string name="password_has_been_successfully_changed_please_login">Password has been successfully changed. Please Login!</string>
    <string name="continue_to_login">CONTINUE TO LOGIN</string>
    <string-array name="Bloodgroup">
        <item>O+ve</item>
        <item>O-ve</item>
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B+ve</item>
        <item>B-ve</item>
        <item>AB+ve</item>
        <item>AB-ve</item>
    </string-array>

    <string name="selectionheadding">Please choose your option to schedule an appointment</string>
    <string name="medical_examination">Medical Examination</string>
    <string name="superficial_radiation_therapy">Superficial Radiation Therapy</string>
    <string name="select_date_heading">Select Date for Appointment</string>
    <string name="avalible_time_slot">Avalible Time slot</string>
    <string name="morning">Morning</string>
    <string name="time_zone_est">Time Zone:EST</string>
    <string name="afternoon">Afternoon</string>
    <string name="service">Service</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="appointment_for">This Appointment is for</string>
    <string name="insurance_details">Please provide Insurance details:</string>
    <string name="insurance">Insurance</string>
    <string name="paying_self">Paying Self</string>
    <string name="pay_with_insurance">Pay with Insurance</string>
    <string name="select_from_existing">Select from Existing</string>
    <string name="new_insurance_details">Add new Insurance details</string>
    <string name="enter_comments">Enter Comments</string>
    <string name="comments_if_any">Comments (If any)</string>
    <string name="appointment_scheduled">Appointment Scheduled</string>
    <string name="medical">Medical</string>
    <string name="done">DONE</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="landing_screen_title">Schedule Appointment for Dermatology Services</string>
    <string name="telehealth_video_visits">Telehealth Video Visits</string>
    <string name="cosmetic_text">Cosmetic Appointment Botox, Fillers, and other</string>
    <string name="symptom_check_instruction"><![CDATA[With your health & safety our number one priority against COVID-19, Are you experiencing any of the following symptoms?]]></string>
    <string name="cough">Cough</string>
    <string name="fever">Fever</string>
    <string name="cold">Cold</string>
    <string name="family_members">Family Members</string>
    <string name="add_insurance">Add Insurance</string>
    <string name="touchid_authentication">TouchID Authentication</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="logout">Logout</string>
    <string name="members">Members</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insurance_information">Enter Insurance Information</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="no_active_appointments">No Active Appointments !</string>
    <string name="relationship_type">Relationship Type</string>
    <string name="enter_relationship_type">Enter Relationship Type</string>

    <string name="do_you_want_to_delete">Do you want to Delete</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="the_appointments_has_been_cancelled">The Appointments has been cancelled</string>
    <string name="server_issue">Server Issue</string>
    <string name="unable_to_fetch_loan_details_due_to_server_issue_please_retry">Unable to fetch loan details due to server issue, please retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_do_not_have_an_active_internet_connection_please_check_your_internet_connection_and_retry">You do not have an active internet connection, please check your internet connection and retry</string>
    <string name="add_a_new_family_member">Add a new Family Member</string>

    <!--<string name="insurance_information">Insurance Information</string>-->

    <string-array name="morningSlots">
        <item>09:00</item>
        <item>09:10</item>
        <item>09:20</item>
        <item>09:30</item>
        <item>09:40</item>
        <item>09:50</item>
        <item>10:00</item>
        <item>10:10</item>
        <item>10:20</item>
        <item>10:30</item>
        <item>10:40</item>
        <item>10:50</item>
        <item>11:00</item>
        <item>11:10</item>
        <item>11:20</item>
        <item>11:30</item>
        <item>11:40</item>
        <item>11:50</item>
    </string-array>

    <string-array name="afternoonSlot">
        <item>01:00</item>
        <item>01:10</item>
        <item>01:20</item>
        <item>01:30</item>
        <item>01:40</item>
        <item>01:50</item>
        <item>02:00</item>
        <item>02:10</item>
        <item>02:20</item>
        <item>02:30</item>
        <item>02:40</item>
        <item>02:50</item>
        <item>03:00</item>
        <item>03:10</item>
        <item>03:20</item>
        <item>03:30</item>
        <item>03:40</item>
        <item>03:50</item>
        <item>04:00</item>
        <item>04:10</item>
        <item>04:20</item>
        <item>04:30</item>
        <item>04:40</item>
        <item>04:50</item>
        <item>05:00</item>
        <item>05:10</item>
        <item>05:20</item>
        <item>05:30</item>
        <item>05:40</item>
        <item>05:50</item>
    </string-array>

    <string name="checkin_completed">CheckIn Completed</string>
    <string name="you_have_reached">You have reached</string>
    <string name="please_wait_for_your_turn_to_walk_up_to_the_waiting_room">Please wait for your turn to walk-up to the waiting-room!</string>
    <string name="appointment_summary">Appointment Summary</string>
    <string name="self">Self</string>
    <string name="ipl_laser_treatment">IPL Laser Treatment</string>
    <string name="id_9285473">ID - 9285473</string>
    <string name="doctor">Doctor</string>
    <string name="dr_andrew_williams_md_faad_fasms">Dr. Andrew Williams MD FAAD, FASMS</string>
    <string name="_15_jun_2020">15 - Jun - 2020</string>
    <string name="_3_00_pm">3:00 PM</string>
    <string name="in_the_interim_you_can_complete_checkin">In the interim you can complete Checkin</string>
    <string name="check_in">CHECK IN</string>
    <string name="call">Call</string>
    <string name="please_call_us">Please call us!</string>
    <string name="appointment_rescheduled">Appointment Rescheduled</string>
    <string name="new_insurance_information">Enter New Insurance Information</string>


</resources>