<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to"
        android:textColor="@color/theme_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/skinmate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/skinmate"
        android:textColor="@color/theme_text"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
       android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:layout_below="@id/logo"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_bottom_sheet"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_bold"
            android:strokeColor="@color/theme_button"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/custom_button_fill"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/theme_button" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pptc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/privacy_policy_terms_and_conditions"
            android:textColor="@color/theme_button"
            android:textSize="10sp" />

    </FrameLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>