<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/success_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/success"
        app:srcCompat="@drawable/success" />


    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/success"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_success_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:text="@string/password_has_been_successfully_changed_please_login"
        android:textAlignment="center"
        android:textColor="@color/theme_text"
        android:textSize="24sp"
        android:textStyle="normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue_to_login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="@color/theme_button"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/continue_to_login"
        android:background="@drawable/custom_button_fill"
        app:cornerRadius="25dp"
        android:height="50dp"
        android:layout_marginTop="40dp">

    </com.google.android.material.button.MaterialButton>


</LinearLayout>
</layout>