<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date_heading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dateTitle"
            android:textColor="@color/theme_color_dark"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/dateTitle"
            android:background="@android:color/darker_gray"/>

        <CalendarView
                android:id="@+id/date_picker_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dateTitle"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:foregroundTint="@color/theme_text"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:theme="@style/CalenderViewCustom"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timeTitle"
            android:layout_marginTop="@dimen/layout_magin"
            app:layout_constraintTop_toBottomOf="@id/date_picker_actions"
            android:text="@string/avalible_time_slot"
            android:textSize="18sp"
            android:textColor="@color/theme_text"/>

        <LinearLayout
            android:id="@+id/morning_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/timeTitle"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/morning"
                android:textSize="18sp"
                android:textColor="@color/theme_background_dark"
                android:layout_weight="0.5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_zone_est"
                android:textSize="18sp"
                android:textColor="@color/theme_color_dark"
                android:layout_weight="0.5"
                android:gravity="right"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/morning_slots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/morning_time"/>
        <LinearLayout
            android:id="@+id/after_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/morning_slots"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/afternoon"
                android:textSize="18sp"
                android:textColor="@color/theme_color_dark"
                android:layout_weight="0.5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_zone_est"
                android:textSize="18sp"
                android:textColor="@color/theme_color_dark"
                android:layout_weight="0.5"
                android:gravity="right"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/afternoon_slots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/after_time"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/afternoon_slots"
            android:text="@string/proceed"
            android:background="@drawable/custom_button_fill"
            android:backgroundTint="@color/theme_button"
            app:cornerRadius="@dimen/button_corner_radius"
            android:layout_marginTop="10dp"
            android:id="@+id/proceedBtn"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>